--- a/.github/workflows/image-publish.yml
+++ b/.github/workflows/image-publish.yml
@@ -11,7 +11,7 @@ name: image-publish
 
 on:
   push:
-    branches: 
+    branches:
       - main
     tags:
       - '7.*.*'
@@ -24,7 +24,7 @@ jobs:
       fail-fast: false
       matrix:
         dist: [ 'musl', 'libc-ubi8', 'libc-ubi9' ]
-        arch: ['amd64']
+        arch: ['arm64']
     runs-on: ubuntu-22.04
     steps:
       - name: Checkout
@@ -43,73 +43,73 @@ jobs:
         uses: ishworkh/docker-image-artifact-upload@v1
         with:
           image: "linux-${{matrix.dist}}-${{matrix.arch}}"
-  assemble:
-    name: assemble
-    needs: build
-    runs-on: ubuntu-22.04
-    steps:
-      - name: Set variables
-        run: |
-          BRANCH_NAME=${{ github.ref }}
-          echo "BRANCH_NAME=${BRANCH_NAME##*/}" >> $GITHUB_ENV
-      - name: Checkout
-        uses: actions/checkout@v3
-      - name: Download linux-libc-ubi8-amd64 image
-        uses: ishworkh/docker-image-artifact-download@v1
-        with:
-          image: "linux-libc-ubi8-amd64"
-      - name: Download linux-libc-ubi9-amd64 image
-        uses: ishworkh/docker-image-artifact-download@v1
-        with:
-          image: "linux-libc-ubi9-amd64"
-      - name: Download linux-musl image
-        uses: ishworkh/docker-image-artifact-download@v1
-        with:
-          image: "linux-musl-amd64"
-      - name: Display docker images
-        run: |
-          docker images
-      - name: Login to Quay.io
-        uses: docker/login-action@v2
-        with:
-          registry: quay.io
-          username: ${{ secrets.QUAY_USERNAME }}
-          password: ${{ secrets.QUAY_PASSWORD }}        
-      - name: Docker Build and Push
-        run: |
-          SHORT_SHA1=$(git rev-parse --short=7 HEAD)
-          if [[ ${{ env.BRANCH_NAME }} == main ]]; then
-            docker buildx build --platform linux/amd64 -f build/dockerfiles/assembly.Dockerfile --push -t quay.io/che-incubator/che-code:insiders -t quay.io/che-incubator/che-code:next -t quay.io/che-incubator/che-code:insiders-${SHORT_SHA1} .
-          elif [[ ${{ env.BRANCH_NAME }} =~ ^7\.[0-9]+\.[0-9]+$ ]]; then
-            docker buildx build --platform linux/amd64 -f build/dockerfiles/assembly.Dockerfile --push -t quay.io/che-incubator/che-code:${{ env.BRANCH_NAME }} -t quay.io/che-incubator/che-code:latest . 
-          fi
-  release-finish:
-    name: release-finish
-    needs: [build, assemble]
-    runs-on: ubuntu-22.04
-    # don't notify for cancelled builds
-    if: (success() || failure()) && github.ref != 'refs/heads/main'
-    steps:
-      - name: Set variables
-        run: |
-          BRANCH_NAME=${{ github.ref }}
-          echo "BRANCH_NAME=${BRANCH_NAME##*/}" >> $GITHUB_ENV
-      #- name: Create failure MM message
-        #if: contains(join(needs.*.result, ','), 'failure')
-        #run: |
-          #echo "{\"text\":\":no_entry_sign: Che Code ${{ env.BRANCH_NAME }} release has failed: https://github.com/che-incubator/che-code/actions/workflows/image-publish.yml\"}" > mattermost.json
-      #- name: Create success MM message
-        #run: |
-          #echo "{\"text\":\":white_check_mark: Che Code ${{ env.BRANCH_NAME }} has been released: https://quay.io/che-incubator/che-code:${{ env.BRANCH_NAME }}\"}" > mattermost.json
-      #- name: Send MM message
-        # don't notify for cancelled builds
-        #if: success() || failure()
-        #uses: mattermost/action-mattermost-notify@1.1.0
-        #env:
-          #MATTERMOST_WEBHOOK_URL: ${{ secrets.MATTERMOST_WEBHOOK_URL }}
-          #MATTERMOST_CHANNEL: eclipse-che-releases
-          #MATTERMOST_USERNAME: che-bot
-  dev:
+  # assemble:
+  #   name: assemble
+  #   needs: build
+  #   runs-on: ubuntu-22.04
+  #   steps:
+  #     - name: Set variables
+  #       run: |
+  #         BRANCH_NAME=${{ github.ref }}
+  #         echo "BRANCH_NAME=${BRANCH_NAME##*/}" >> $GITHUB_ENV
+  #     - name: Checkout
+  #       uses: actions/checkout@v3
+  #     - name: Download linux-libc-ubi8-amd64 image
+  #       uses: ishworkh/docker-image-artifact-download@v1
+  #       with:
+  #         image: "linux-libc-ubi8-amd64"
+  #     - name: Download linux-libc-ubi9-amd64 image
+  #       uses: ishworkh/docker-image-artifact-download@v1
+  #       with:
+  #         image: "linux-libc-ubi9-amd64"
+  #     - name: Download linux-musl image
+  #       uses: ishworkh/docker-image-artifact-download@v1
+  #       with:
+  #         image: "linux-musl-amd64"
+  #     - name: Display docker images
+  #       run: |
+  #         docker images
+  #     - name: Login to Quay.io
+  #       uses: docker/login-action@v2
+  #       with:
+  #         registry: quay.io
+  #         username: ${{ secrets.QUAY_USERNAME }}
+  #         password: ${{ secrets.QUAY_PASSWORD }}
+  #     - name: Docker Build and Push
+  #       run: |
+  #         SHORT_SHA1=$(git rev-parse --short=7 HEAD)
+  #         if [[ ${{ env.BRANCH_NAME }} == main ]]; then
+  #           docker buildx build --platform linux/amd64 -f build/dockerfiles/assembly.Dockerfile --push -t quay.io/che-incubator/che-code:insiders -t quay.io/che-incubator/che-code:next -t quay.io/che-incubator/che-code:insiders-${SHORT_SHA1} .
+  #         elif [[ ${{ env.BRANCH_NAME }} =~ ^7\.[0-9]+\.[0-9]+$ ]]; then
+  #           docker buildx build --platform linux/amd64 -f build/dockerfiles/assembly.Dockerfile --push -t quay.io/che-incubator/che-code:${{ env.BRANCH_NAME }} -t quay.io/che-incubator/che-code:latest .
+  #         fi
+  # release-finish:
+  #   name: release-finish
+  #   needs: [build, assemble]
+  #   runs-on: ubuntu-22.04
+  #   # don't notify for cancelled builds
+  #   if: (success() || failure()) && github.ref != 'refs/heads/main'
+  #   steps:
+  #     - name: Set variables
+  #       run: |
+  #         BRANCH_NAME=${{ github.ref }}
+  #         echo "BRANCH_NAME=${BRANCH_NAME##*/}" >> $GITHUB_ENV
+  #     #- name: Create failure MM message
+  #       #if: contains(join(needs.*.result, ','), 'failure')
+  #       #run: |
+  #         #echo "{\"text\":\":no_entry_sign: Che Code ${{ env.BRANCH_NAME }} release has failed: https://github.com/che-incubator/che-code/actions/workflows/image-publish.yml\"}" > mattermost.json
+  #     #- name: Create success MM message
+  #       #run: |
+  #         #echo "{\"text\":\":white_check_mark: Che Code ${{ env.BRANCH_NAME }} has been released: https://quay.io/che-incubator/che-code:${{ env.BRANCH_NAME }}\"}" > mattermost.json
+  #     #- name: Send MM message
+  #       # don't notify for cancelled builds
+  #       #if: success() || failure()
+  #       #uses: mattermost/action-mattermost-notify@1.1.0
+  #       #env:
+  #         #MATTERMOST_WEBHOOK_URL: ${{ secrets.MATTERMOST_WEBHOOK_URL }}
+  #         #MATTERMOST_CHANNEL: eclipse-che-releases
+  #         #MATTERMOST_USERNAME: che-bot
+  # dev:
     name: dev
     runs-on: ubuntu-22.04
     if: github.ref == 'refs/heads/main'
@@ -121,7 +121,7 @@ jobs:
         with:
           registry: quay.io
           username: ${{ secrets.QUAY_USERNAME }}
-          password: ${{ secrets.QUAY_PASSWORD }}        
+          password: ${{ secrets.QUAY_PASSWORD }}
       - name: Docker Build and Push
         env:
           # https://github.com/microsoft/vscode-ripgrep#github-api-limit-note
