--- a/.github/workflows/image-publish.yml
+++ b/.github/workflows/image-publish.yml
@@ -110,23 +110,23 @@ jobs:
   #         #MATTERMOST_CHANNEL: eclipse-che-releases
   #         #MATTERMOST_USERNAME: che-bot
   # dev:
-    name: dev
-    runs-on: ubuntu-22.04
-    if: github.ref == 'refs/heads/main'
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-      - name: Login to Quay.io
-        uses: docker/login-action@v2
-        with:
-          registry: quay.io
-          username: ${{ secrets.QUAY_USERNAME }}
-          password: ${{ secrets.QUAY_PASSWORD }}
-      - name: Docker Build and Push
-        env:
-          # https://github.com/microsoft/vscode-ripgrep#github-api-limit-note
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          SHORT_SHA1=$(git rev-parse --short=7 HEAD)
-          docker buildx build --platform linux/amd64 -f build/dockerfiles/dev.Dockerfile --push -t quay.io/che-incubator/che-code-dev:insiders -t quay.io/che-incubator/che-code-dev:next -t quay.io/che-incubator/che-code-dev:insiders-${SHORT_SHA1} .
+    # name: dev
+    # runs-on: ubuntu-22.04
+    # if: github.ref == 'refs/heads/main'
+    # steps:
+    #   - name: Checkout
+    #     uses: actions/checkout@v3
+    #   - name: Login to Quay.io
+    #     uses: docker/login-action@v2
+    #     with:
+    #       registry: quay.io
+    #       username: ${{ secrets.QUAY_USERNAME }}
+    #       password: ${{ secrets.QUAY_PASSWORD }}
+    #   - name: Docker Build and Push
+    #     env:
+    #       # https://github.com/microsoft/vscode-ripgrep#github-api-limit-note
+    #       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    #     run: |
+    #       SHORT_SHA1=$(git rev-parse --short=7 HEAD)
+    #       docker buildx build --platform linux/amd64 -f build/dockerfiles/dev.Dockerfile --push -t quay.io/che-incubator/che-code-dev:insiders -t quay.io/che-incubator/che-code-dev:next -t quay.io/che-incubator/che-code-dev:insiders-${SHORT_SHA1} .
 
